Update favicon to favico.png

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <meta property="twitter:image" content="https://omaralhami.com/pfp.jpg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="pfp.jpg">
-    <link rel="apple-touch-icon" href="pfp.jpg">
+    <link rel="icon" type="image/png" href="favico.png">
+    <link rel="apple-touch-icon" href="favico.png">
     
     <!-- Preload critical resources -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Cairo:wght@300;400;500;600;700&display=swap" as="style">
