Add email contact: contact@omaralhami.com

--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@
                     <i class="fab fa-whatsapp"></i>
                     <span data-en="WhatsApp" data-ar="واتساب">WhatsApp</span>
                 </a>
+                <a href="mailto:contact@omaralhami.com" class="contact-btn">
+                    <i class="fas fa-envelope"></i>
+                    <span data-en="Email" data-ar="إيميل">Email</span>
+                </a>
                 <a href="https://discord.gg/marx" target="_blank" class="contact-btn">
                     <i class="fab fa-discord"></i>
                     <span>Discord</span>
