Add Arabic translation for main username: عمر الحامي

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             
             <div class="profile-right">
                 <div class="profile-top">
-                    <h1 class="username" data-en="Omar Al-hami" data-ar="Omar Al-hami">Omar Al-hami</h1>
+                    <h1 class="username" data-en="Omar Al-hami" data-ar="عمر الحامي">Omar Al-hami</h1>
                     <div class="verified-badge">
                         <i class="fas fa-check-circle"></i>
                     </div>
