Improve mobile spacing and fix verified badge positioning - Enhanced mobile spacing throughout the site for better UX - Increased padding and margins for more comfortable touch targets - Improved profile header, services, projects, testimonials spacing - Fixed verified badge positioning to be closer to username - Added copyright footer with bilingual support - Added clickable indicators for project cards with arrows - Optimized for Instagram-like mobile experience

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <!-- Projects Section -->
         <section id="work" class="projects-section">
             <h2 data-en="Recent Work" data-ar="أعمالي الأخيرة">Recent Work</h2>
+            <p class="projects-subtitle" data-en="Click on any project to view it live" data-ar="اضغط على أي مشروع لمشاهدته مباشرة">Click on any project to view it live</p>
             <div class="projects-grid">
                 <a href="https://so-creativetech.com/" target="_blank" class="project-card">
                     <div class="project-image">
@@ -295,6 +296,11 @@
                 </a>
             </div>
         </section>
+
+        <!-- Copyright Footer -->
+        <footer class="copyright-footer">
+            <p data-en="© 2024 Made by Omar Al-hami. All rights reserved." data-ar="© 2024 تم التصميم بواسطة عمر الحامي. جميع الحقوق محفوظة.">© 2024 Made by Omar Al-hami. All rights reserved.</p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
